added test JPMS modules